# blockchain

./: CMakeLists.txt
cmake/: Findsodium.cmake  Findsodium.cmake.txt
src/: block.hpp  blockchain.cpp  blockchain.hpp  main.cpp  mempool.hpp  miner.cpp  miner.hpp  transaction.cpp  transaction.hpp  utxo.cpp  utxo.hpp  wallet.cpp  wallet.hpp
tests/: wallet.cpp
